styles.css
body {
    box-sizing: border-box;
    background-color: #D5E1EF;
    font-family: 'Outfit', sans-serif;
    text-align: center;
    width: 100%;
    height: 100%;
}

.container {
    background-color: #FFFFFF;
    margin: 8% auto 0 auto;
    border: none;
    border-radius: 20px;
    height: fit-content;
    width: fit-content;
    padding: 16px;
}

.qr-card {
    background-color: #2C7DFA;
    border-radius: 10px;
    margin-bottom: 24px;
    height: 288px;
    width: 288px;
    overflow: hidden;
    position: relative;
    z-index: 1;
}

.beeg-circle {
    height: 328px;
    width: 328px;
    background-color: #3685FF;
    border-radius: 50%;
    position: relative;
    bottom: 420%;
    right: 112%;
}

.smol-circle {
    height: 270px;
    width: 270px;
    background-color: #3685FF;
    border-radius: 50%;
    position: relative;
    top: -16%;
    left: 44%;
}

.qr-code {
    padding: 64px;
    height: 160px;
    width: 160px;
}

.big-text {
    color: #1F314F;
    font-size: 22px;
    font-weight: 700;
    width: 288px;
}

.smol-text {
    color: #1F314F;
    font-size: 15px;
    font-weight: 400;
    width: 256px;
    margin-top: 16px;
    margin-bottom: 40px;
    margin-left: auto;
    margin-right: auto;
}

